--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cmdk": "^1.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "openai": "^5.23.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
